[profile.release]
opt-level = 3              # Maximize speed (Level 3 is the highest)
lto = true                 # Link Time Optimization (optimizes across crate boundaries)
codegen-units = 1          # Allows for more aggressive optimizations
panic = "abort"            # Removes stack unwinding code (smaller/faster)
strip = true               # Automatically strips symbols (no need for external tools)

[workspace]
members = [
    "alias_lib",
    "alias_wrapper",
    "alias_win32",
    "alias_hybrid",
]
resolver = "3"