# V:\Projects\alias\Cargo.toml
[workspace.package]
authors = ["G. Anthony Davis"]
version = "0.11.15"
edition = "2024"

[workspace]
members = [
    "alias_nuke",
    "alias_lib",
    "alias_wrapper",
    "alias_win32",
    "alias_hybrid",
]
resolver = "3"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[workspace.dependencies]
# --- Internal Project Paths (Defined ONCE here) ---
alias_lib = { path = "./alias_lib" }
alias_nuke = { path = "./alias_nuke" }
alias_win32 = { path = "./alias_win32" }
alias_wrapper = { path = "./alias_wrapper" }

# --- Shared External Crates ---
windows-sys = { version = "0.61.2", features = ["Win32_System_Console",
                                                "Win32_System_Threading",
                                                "Win32_Security",
                                                "Win32_System_Registry",
                                                "Win32_Foundation"] }
tempfile = "3.24.0"
serial_test = "3.2.0"
ctor = "0.2.9" # Use a consistent version across the board
lazy_static = "1.5.0"
function_name = "0.3.0"
winreg = "0.55.0"
shlex = "1.3.0"
fs2 = "0.4.3"
assert_cmd = "2.1.1"
predicates = "3.1.3"