# alias_hybrid/Cargo.toml
[package]
name = "alias"
version = "0.9.0"
edition = "2024"

[dependencies]
alias_lib = { path = "../alias_lib" }
alias_win32 = { path = "../alias_win32" }
alias_wrapper = { path = "../alias_wrapper" }
windows-sys = { version = "0.61.2", features = [
    "Win32_System_Console",
    "Win32_System_Registry",
    "Win32_Foundation",
    "Win32_Foundation",
] }
assert_cmd = "2.1.1"
predicates = "3.1.3"

[dev-dependencies]
serial_test = "3.1.1"
winreg = "0.52" # Or your current version
alias_nuke = { path = "../alias_nuke" }

[features]
test_utils = []
