# alias_hybrid/Cargo.toml
[package]
name = "alias"
version = "0.9.0"
edition = "2024"

[dependencies]
alias_lib = { workspace = true }
alias_win32 = { workspace = true }
alias_wrapper = { workspace = true }
windows-sys = { workspace = true }
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
lazy_static = { workspace = true }
fs2 = { workspace = true }
function_name = { workspace = true }

[dev-dependencies]
serial_test = { workspace = true }
winreg = { workspace = true }
alias_nuke = { workspace = true }
ctor = { workspace = true }

[features]
test_utils = []
