# alias_hybrid/Cargo.toml
[package]
name = "alias"
version = "0.0.5"
edition = "2024"
license-file = "../../LICENSE"

[dependencies]
alias_lib = { workspace = true }
alias_win32 = { workspace = true }
alias_wrapper = { workspace = true }
windows-sys = { workspace = true }
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
lazy_static = { workspace = true }
fs2 = { workspace = true }
function_name = { workspace = true }
serial_test = "3.2.0"

[dev-dependencies]
serial_test = { workspace = true }
winreg = { workspace = true }
alias_nuke = { workspace = true }
ctor = { workspace = true }
windows-sys = { workspace = true }

[features]
test_utils = []
identity_hybrid = []

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(feature, values("identity_win32", "identity_wrapper", "identity_hybrid", "test_utils"))'] }

