# alias_lib/Cargo.toml
[package]
name = "alias_lib"
version = "0.8.0"
edition = "2024"

[dependencies]
tempfile = { workspace = true }
shlex = { workspace = true }
serial_test = { workspace = true }
function_name = { workspace = true }

[dev-dependencies]
alias_nuke = { workspace = true }
serial_test = { workspace = true }
ctor = { workspace = true }
lazy_static = { workspace = true }
winreg = { workspace = true }
windows-sys = { workspace = true }

[features]
test_utils = []

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(feature, values("identity_win32", "identity_wrapper", "identity_hybrid", "test_utils"))'] }