# alias_win32/Cargo.toml
[package]
name = "alias_win32"
version = "0.7.2"
edition = "2024"

[dependencies]
alias_lib = { path = "../alias_lib" }
windows-sys = { version = "0.61.2", features = [
    "Win32_System_Console",
    "Win32_System_Registry",
    "Win32_Foundation",
    "Win32_Foundation",
] }
winreg = "0.55.0"
tempfile = "3.24.0"


[dev-dependencies]
serial_test = "3.1.1"
alias_nuke = { path = "../alias_nuke" }


[features]
test_utils = []