# alias_win32/Cargo.toml
[package]
name = "alias_win32"
version = "0.7.2"
edition = "2024"

[dependencies]
# Pull the shared version/path from root
alias_lib = { workspace = true }
windows-sys = { workspace = true }
winreg = { workspace = true }
tempfile = { workspace = true }
function_name = { workspace = true }

[dev-dependencies]
# Testing tools also pull from root
serial_test = { workspace = true }
alias_nuke = { workspace = true }
ctor = { workspace = true }
lazy_static = { workspace = true }

[features]
test_utils = []
