# alias_win32/Cargo.toml
[package]
name = "alias_win32"
version = "0.3.4"
edition = "2024"
license-file = "../../LICENSE"

[dependencies]
# Pull the shared version/path from root
alias_lib = { workspace = true }
windows-sys = { workspace = true }
winreg = { workspace = true }
tempfile = { workspace = true }
function_name = { workspace = true }

[dev-dependencies]
# Testing tools also pull from root
serial_test = { workspace = true }
alias_nuke = { workspace = true }
ctor = { workspace = true }
lazy_static = { workspace = true }
windows-sys = { workspace = true }

[features]
test_utils = []
identity_win32 = []

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(feature, values("identity_win32", "identity_wrapper", "identity_hybrid", "test_utils"))'] }

