# alias_wrapper/Cargo.toml
[package]
name = "alias_wrapper"
version = "0.5.1"
edition = "2024"

[dependencies]
alias_lib = { path = "../alias_lib" }
winreg = "0.55.0"
tempfile = "3.24.0"

[dev-dependencies]
serial_test = "3.1.1"
alias_nuke = { path = "../alias_nuke" }
assert_cmd = "2.0"

[features]
test_utils = []