# alias_wrapper/Cargo.toml
[package]
name = "alias_wrapper"
version = "0.5.1"
edition = "2024"

[dependencies]
alias_lib = { workspace = true }
winreg = { workspace = true }
tempfile = { workspace = true }
function_name = { workspace = true }

[dev-dependencies]
alias_nuke = { workspace = true }
serial_test = { workspace = true }
assert_cmd = { workspace = true }
ctor = { workspace = true }
function_name = { workspace = true }
lazy_static = { workspace = true }

[features]
test_utils = []
