# alias_wrapper/Cargo.toml
[package]
name = "alias_wrapper"
version = "0.5.1"
edition = "2024"

[dependencies]
alias_lib = { workspace = true }
winreg = { workspace = true }
tempfile = { workspace = true }
function_name = { workspace = true }

[dev-dependencies]
alias_nuke = { workspace = true }
serial_test = { workspace = true }
assert_cmd = { workspace = true }
ctor = { workspace = true }
function_name = { workspace = true }
lazy_static = { workspace = true }
windows-sys = { workspace = true }

[features]
test_utils = []
identity_wrapper = []
default = ["identity_wrapper"]

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(feature, values("identity_win32", "identity_wrapper", "identity_hybrid", "test_utils"))'] }